--- a/ch02/解析库的使用-XPath.ipynb
+++ b/ch02/解析库的使用-XPath.ipynb
@@ -47,18 +47,19 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "%%HTML\n",
     "<div>\n",
     "    <ul>\n",
     "         <li class=\"item-0\"><a href=\"link1.html\">first item</a></li>\n",
     "         <li class=\"item-1\"><a href=\"link2.html\">second item</a></li>\n",
     "         <li class=\"item-inactive\"><a href=\"link3.html\">third item</a></li>\n",
     "         <li class=\"item-1\"><a href=\"link4.html\">fourth item</a></li>\n",
-    "         <li class=\"item-0\"><a href=\"link5.html\">fifth item</a>\n",
-    "     </ul>\n",
-    " </div>"
+    "         <li class=\"item-0\"><a href=\"link5.html\">fifth item</a></li>\n",
+    "    </ul>\n",
+    "</div>"
    ]
   },
   {
