--- a/ch02/解析库的使用-XPath.ipynb
+++ b/ch02/解析库的使用-XPath.ipynb
@@ -47,8 +47,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "    <ul>\n",
+       "         <li class=\"item-0\"><a href=\"link1.html\">first item</a></li>\n",
+       "         <li class=\"item-1\"><a href=\"link2.html\">second item</a></li>\n",
+       "         <li class=\"item-inactive\"><a href=\"link3.html\">third item</a></li>\n",
+       "         <li class=\"item-1\"><a href=\"link4.html\">fourth item</a></li>\n",
+       "         <li class=\"item-0\"><a href=\"link5.html\">fifth item</a></li>\n",
+       "    </ul>\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%HTML\n",
     "<div>\n",
