--- a/ch02/解析库的使用-pyquery.ipynb
+++ b/ch02/解析库的使用-pyquery.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
    ],
    "source": [
     "from pyquery import PyQuery as pq\n",
-    "doc = pq(filename='E:/demo.html')\n",
+    "doc = pq(filename='./demo.html')\n",
     "print(doc('li'))"
    ]
   },
